Switched to use new methods of PreallocatedList.